update logic for path and app name
